--- a/asexnagorc.html
+++ b/asexnagorc.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creativ Heands Vardenis</title>
+    <title>Creative Heands Vardenis</title>
     <link rel="stylesheet" href="stile.css">
 </head>
 <body>
     <header>
         
-        <h1 id="head"><a href="index.html">Creativ Hands Vardenis</a></h1>
+        <h1 id="head"><a href="index.html">Creative Hands Vardenis</a></h1>
         <h3 id="patver">Ընդունվում են պատվերներ</h3>
     </header>
     <nav>
